# agent

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  buf.gen.yaml  go.mod  go.sum  mkdocs.yml  pyproject.toml
.claude/rules/: determinism.md  go-layout.md  go-package-docs.md  go-style.md  go-testing.md  grpc.md  logging-telemetry.md  markdown.md  plugin-runtime.md  proto-layout.md  proto.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  provider_proposal.yml
.github/instructions/: code-review.instructions.md  coding-agent.instructions.md  docs.instructions.md  go.instructions.md  proto.instructions.md  repo.instructions.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  lint.yml  release.yml  scorecard.yml  security.yml
docs/: CNAME  index.md
docs/assets/: extra.css
docs/first-party/: index.md
docs/specifications/: README.md  architecture.md  conventions.md  event-bus.md  glossary.md  kernel-callbacks.md  observability.md  state-backend.md
internal/: CLAUDE.md
internal/agentprofile/: CLAUDE.md  README.md  depth.go  depth_test.go  doc.go  model.go  model_test.go  tools.go  tools_fuzz_test.go  tools_test.go  types.go
internal/config/: CLAUDE.md  README.md  attrs.go  bridge.go  bridge_test.go  doc.go  errors.go  helpers_test.go  hook.go  load.go  load_fuzz_test.go  load_test.go  policy.go  profile.go  provider.go  settings.go  settings_test.go  telemetry_test.go  types.go
(+497 files in other folders)
