# Documentation toolchain only. This is a Go module; this file exists solely so
# uv can pin and provision the MkDocs stack (see mkdocs.yml). Not a Python package.
[project]
name = "pluggableharness-agent-docs"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[dependency-groups]
docs = [
    "mkdocs-material[imaging]~=9.7",
    "markdown-gfm-admonition~=0.1",
    "mkdocs-git-revision-date-localized-plugin~=1.4",
    "mkdocs-minify-plugin~=0.8",
    "mkdocs-llmstxt~=0.5",
]
